added independent evaluation

--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -1297,7 +1297,6 @@
     "\n",
     "    return report_df\n",
     "\n",
-    "\n",
     "# plot confusion matrix\n",
     "def plot_confusion_matrix(labels, predictions, title):\n",
     "    cm = confusion_matrix(labels, predictions)\n",
@@ -1331,8 +1330,7 @@
     "    plt.legend()\n",
     "\n",
     "    plt.suptitle(title)\n",
-    "    plt.show()\n",
-    "    "
+    "    plt.show()"
    ]
   },
   {
@@ -1531,6 +1529,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "# Define the architecture for the traditional neural network for binary classification (is_cancerous)\n",
     "def create_is_cancerous_nn_model(input_shape):\n",
     "    model = Sequential(name='is_cancerous_nn_model')\n",
@@ -2032,6 +2031,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "# Create the CNN model\n",
     "def create_is_cancerous_model():\n",
     "    model = Sequential(name='is_cancerous_model')\n",
@@ -2351,29 +2351,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INFO:tensorflow:Reloading Tuner from my_dir/cancerous_tuning/tuner0.json\n",
+      "INFO:tensorflow:Oracle triggered exit\n",
       "\n",
       "Search: Running Trial #1\n",
       "\n",
       "Value             |Best Value So Far |Hyperparameter\n",
-      "64                |64                |units\n",
+      "96                |96                |units\n",
       "0.01              |0.01              |learning_rate\n",
       "\n",
       "Epoch 1/10\n",
-      "186/186 - 4s - loss: 0.6487 - accuracy: 0.6247 - val_loss: 0.5937 - val_accuracy: 0.6837 - 4s/epoch - 19ms/step\n",
+      "186/186 - 4s - loss: 1.3156 - accuracy: 0.4130 - val_loss: 1.3120 - val_accuracy: 0.4058 - 4s/epoch - 20ms/step\n",
       "Epoch 2/10\n",
-      "186/186 - 3s - loss: 0.5222 - accuracy: 0.7743 - val_loss: 0.4007 - val_accuracy: 0.8439 - 3s/epoch - 14ms/step\n",
+      "186/186 - 3s - loss: 1.3071 - accuracy: 0.4157 - val_loss: 1.3085 - val_accuracy: 0.4058 - 3s/epoch - 17ms/step\n",
       "Epoch 3/10\n",
-      "186/186 - 3s - loss: 0.4820 - accuracy: 0.7827 - val_loss: 0.3838 - val_accuracy: 0.8287 - 3s/epoch - 15ms/step\n",
+      "186/186 - 3s - loss: 1.3061 - accuracy: 0.4157 - val_loss: 1.3096 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
       "Epoch 4/10\n",
-      "186/186 - 3s - loss: 0.4298 - accuracy: 0.8142 - val_loss: 0.3640 - val_accuracy: 0.8621 - 3s/epoch - 15ms/step\n",
-      "Epoch 5/10\n"
+      "186/186 - 3s - loss: 1.3061 - accuracy: 0.4157 - val_loss: 1.3084 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 5/10\n",
+      "186/186 - 3s - loss: 1.3052 - accuracy: 0.4157 - val_loss: 1.3087 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 6/10\n",
+      "186/186 - 3s - loss: 1.3056 - accuracy: 0.4157 - val_loss: 1.3091 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 7/10\n",
+      "186/186 - 3s - loss: 1.3055 - accuracy: 0.4157 - val_loss: 1.3094 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 8/10\n",
+      "186/186 - 3s - loss: 1.3056 - accuracy: 0.4157 - val_loss: 1.3083 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 9/10\n",
+      "186/186 - 3s - loss: 1.3051 - accuracy: 0.4157 - val_loss: 1.3093 - val_accuracy: 0.4058 - 3s/epoch - 16ms/step\n",
+      "Epoch 10/10\n",
+      "186/186 - 3s - loss: 1.3053 - accuracy: 0.4157 - val_loss: 1.3097 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 1/10\n",
+      "186/186 - 3s - loss: 1.3164 - accuracy: 0.4115 - val_loss: 1.3111 - val_accuracy: 0.4058 - 3s/epoch - 19ms/step\n",
+      "Epoch 2/10\n",
+      "186/186 - 3s - loss: 1.3077 - accuracy: 0.4157 - val_loss: 1.3090 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 3/10\n",
+      "186/186 - 3s - loss: 1.3065 - accuracy: 0.4157 - val_loss: 1.3097 - val_accuracy: 0.4058 - 3s/epoch - 16ms/step\n",
+      "Epoch 4/10\n",
+      "186/186 - 3s - loss: 1.3061 - accuracy: 0.4157 - val_loss: 1.3091 - val_accuracy: 0.4058 - 3s/epoch - 16ms/step\n",
+      "Epoch 5/10\n",
+      "186/186 - 3s - loss: 1.3056 - accuracy: 0.4157 - val_loss: 1.3089 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 6/10\n",
+      "186/186 - 3s - loss: 1.3053 - accuracy: 0.4157 - val_loss: 1.3100 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 7/10\n",
+      "186/186 - 3s - loss: 1.3052 - accuracy: 0.4157 - val_loss: 1.3091 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 8/10\n",
+      "186/186 - 3s - loss: 1.3055 - accuracy: 0.4157 - val_loss: 1.3092 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 9/10\n",
+      "186/186 - 3s - loss: 1.3056 - accuracy: 0.4157 - val_loss: 1.3083 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 10/10\n",
+      "186/186 - 3s - loss: 1.3051 - accuracy: 0.4157 - val_loss: 1.3082 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 1/10\n",
+      "186/186 - 3s - loss: 1.3280 - accuracy: 0.4049 - val_loss: 1.3090 - val_accuracy: 0.4058 - 3s/epoch - 18ms/step\n",
+      "Epoch 2/10\n",
+      "186/186 - 3s - loss: 1.3079 - accuracy: 0.4157 - val_loss: 1.3085 - val_accuracy: 0.4058 - 3s/epoch - 15ms/step\n",
+      "Epoch 3/10\n"
      ]
     }
    ],
@@ -2437,7 +2475,7 @@
     "    model.add(Flatten())\n",
     "    model.add(Dense(64, activation='relu'))\n",
     "    model.add(Dropout(0.5))\n",
-    "    model.add(Dense(NUM_CLASSES, activation='softmax'))\n",
+    "    model.add(Dense(OUTPUT_CLASSES_CELLTYPE, activation='softmax'))\n",
     "\n",
     "    # Tune the learning rate for the optimizer\n",
     "    hp_learning_rate = hp.Choice('learning_rate', values=[1e-2, 1e-3, 1e-4])\n",
@@ -2510,20 +2548,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the model\n",
+    "is_cancerous_model.save('models/is_cancerous_CNN_hyperparameter_tuning_model.h5')\n",
+    "cell_type_model.save('models/cell_type_CNN_hyperparameter_tuning_model.h5')\n",
+    "print('CNN Models after hyperparameter tuning saved successfully!')\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning\n",
+    "## Deep Learning Model\n",
     "\n",
     "The architecture of the proposed Deep Learning model is designed to handle complex data patterns. Motivations behind choosing this architecture:\n",
     "\n",
-    "+ Multi-Layer Design: The model is a multi-layer perceptron (MLP) with three hidden layers. This design allows the model to learn complex patterns and relationships in the data. With only one layer, the model can only learn linear relationships. However, with multiple layers, the model can learn non-linear relationships often present in complex data like images.\n",
-    "+ Number of Neurons: The model starts with a larger number of neurons in the first layer (512) and gradually reduces the number of neurons in subsequent layers (256 and 128). This design is often referred to as a \"funnel\" structure. It is based on the assumption that the model should learn a large number of low-level features in the early layers and then combine these into a smaller number of high-level features in the deeper layers.\n",
-    "+ Relu Activation Function: The Rectified Linear Unit (ReLU) activation function is used in the hidden layers. ReLU is popular because it helps mitigate the vanishing gradients problem, which can hinder learning in deep neural networks.\n",
-    "+ Dropout Layers: Dropout layers are included after each Dense layer. Dropout is a regularization technique that helps prevent overfitting. During training, it randomly sets a fraction of the input units to 0, which helps prevent over-dependence on any single neuron and makes the model more robust.\n",
-    "+ Sigmoid and Softmax Activation Functions: In the output layer, a sigmoid activation function is used for the binary classification task (is_cancerous), and a softmax activation function is used for the multi-class classification task (cell_type). These activation functions are suitable for these types of classification tasks because they produce a probability distribution over the classes.\n",
-    "+ Adam Optimizer: The model uses the Adam optimizer, an adaptive learning rate optimization algorithm. It is popular because it requires little memory, is computationally efficient, and works well with problems that have large data or parameters."
+    "+ **Multi-Layer Design:** The model is a multi-layer perceptron (MLP) with three hidden layers. This design allows the model to learn complex patterns and relationships in the data. With only one layer, the model can only learn linear relationships. However, with multiple layers, the model can learn non-linear relationships often present in complex data like images.\n",
+    "+ **Number of Neurons:** The model starts with a larger number of neurons in the first layer (512) and gradually reduces the number of neurons in subsequent layers (256 and 128). This design is often referred to as a \"funnel\" structure. It is based on the assumption that the model should learn a large number of low-level features in the early layers and then combine these into a smaller number of high-level features in the deeper layers.\n",
+    "+ **Relu Activation Function:** The Rectified Linear Unit (ReLU) activation function is used in the hidden layers. ReLU is popular because it helps mitigate the vanishing gradients problem, which can hinder learning in deep neural networks.\n",
+    "+ **Dropout Layers:** Dropout layers are included after each Dense layer. Dropout is a regularization technique that helps prevent overfitting. During training, it randomly sets a fraction of the input units to 0, which helps prevent over-dependence on any single neuron and makes the model more robust.\n",
+    "+ **Sigmoid and Softmax Activation Functions:** In the output layer, a sigmoid activation function is used for the binary classification task (is_cancerous), and a softmax activation function is used for the multi-class classification task (cell_type). These activation functions are suitable for these types of classification tasks because they produce a probability distribution over the classes.\n",
+    "+ **Adam Optimizer:** The model uses the Adam optimizer, an adaptive learning rate optimization algorithm. It is popular because it requires little memory, is computationally efficient, and works well with problems that have large data or parameters."
    ]
   },
   {
@@ -2671,10 +2721,10 @@
     "best_model = tuner.get_best_models(num_models=1)[0]\n",
     "\n",
     "# Save the best model to a file\n",
-    "best_model.save('best_model.h5')\n",
+    "best_model.save('models/best_model.h5')\n",
     "\n",
     "# Load the saved model\n",
-    "loaded_model = load_model('best_model.h5')\n"
+    "loaded_model = load_model('models/best_model.h5')\n"
    ]
   },
   {
@@ -2737,22 +2787,53 @@
    "source": [
     "# A dictionary to store the performance metrics of our models\n",
     "our_results = {\n",
-    "    \"isCancerous\": is_cancerous_metrics,\n",
-    "    \"cellType\": cell_type_metrics,\n",
+    "#     \"isCancerous\": is_cancerous_metrics,\n",
+    "    \"cellType\": cell_type_metrics\n",
     "}\n",
     "\n",
     "# A dictionary to store the performance metrics reported in existing works\n",
     "existing_works = {\n",
-    "    \"Paper1\": {\n",
-    "        # \n",
-    "        \"isCancerous\": {\"accuracy\": 0.90, \"precision\": 0.85, \"recall\": 0.88, \"f1_score\": 0.86},\n",
-    "        \"cellType\": {\"accuracy\": 0.85, \"precision\": 0.80, \"recall\": 0.82, \"f1_score\": 0.81},\n",
+    "    \"An Efficient Method of Histological Cell Image Detection Based on Spatial Information Convolution Neural Network - CNN(I,C,M,F,S1,S2) \": {\n",
+    "    # Link 1: https://dl-acm-org.ezproxy.lib.rmit.edu.au/doi/pdf/10.1145/3376067.3376109\n",
+    "    # The networks consist of:\n",
+    "    #         input(I), \n",
+    "    #         convolution(C),\n",
+    "    #         max-pooling(M), \n",
+    "    #         fully-connected(F), \n",
+    "    #         parameter estimation(S1)\n",
+    "    #         spatial layers(S2).\n",
+    "        \n",
+    "#         \"isCancerous\": {\"accuracy\": 0.90, \"precision\": 0.85, \"recall\": 0.88, \"f1_score\": 0.86},\n",
+    "        \"cellType\": {\"accuracy\": 0.758, \"precision\": 0.781, \"recall\": 0.823, \"f1_score\": 0.802}\n",
     "    },\n",
-    "    \"Paper2\": {\n",
-    "        \"isCancerous\": {\"accuracy\": 0.92, \"precision\": 0.87, \"recall\": 0.89, \"f1_score\": 0.88},\n",
-    "        \"cellType\": {\"accuracy\": 0.87, \"precision\": 0.82, \"recall\": 0.84, \"f1_score\": 0.83},\n",
+    "    \"Semantic Segmentation of Cell Nuclei in Breast Cancer using Convolutional Neural Network - SC-CNN and CP-CNN \": {\n",
+    "    # Link 2: https://www.ijcaonline.org/archives/volume176/number22/zarbega-2020-ijca-920133.pdf\n",
+    "    # This study has three main layers where each main layer contains three sublayers, which will be the input layer and a total of ten layers:\n",
+    "    #     First main layer contains convolution layer and rectified linear unit and maxpool\n",
+    "    #     Second main layer contains convolutional layer rectified unit and transposed convolution layer (the non-convoluted layer)\n",
+    "    #     The deconvolution layer reverses the operation of the standard convolution layer, restoring the original input\n",
+    "    #     Last main layer contains convolutional layer, softmax and classification layer\n",
+    "        \n",
+    "#         \"isCancerous\": {\"accuracy\": 0.92, \"precision\": 0.87, \"recall\": 0.89, \"f1_score\": 0.88},\n",
+    "        \"cellType\": {\"accuracy\": 0.851, \"precision\": 0.844, \"recall\": 0.832, \"f1_score\": 0.83}\n",
     "    },\n",
-    "    # Add more papers as needed\n",
+    "    \"Locality Sensitive Deep Learning for Detection and Classification of Nuclei in Routine Colon Cancer Histology Images \": {\n",
+    "    # Link 3: https://ieeexplore-ieee-org.ezproxy.lib.rmit.edu.au/stamp/stamp.jsp?tp=&arnumber=7399414\n",
+    "    \"\"\"\n",
+    "    Firstly, the center-of-the-pixel CNN (CP-CNN) adheres to the traditional approach in object detection. \n",
+    "    It evaluates the likelihood of a pixel at the center of a patch to represent the center of a nucleus. \n",
+    "    Secondly, structural regression (SR-CNN) expands on the idea of single-pixel regression from CP-CNN to encompass regression across the entire patch.\n",
+    "    The networks comprise traditional layers, such as input, convolution, non-overlapping spatial max-pooling,\n",
+    "    and fully-connected layers. In the case of SC-CNN, it also includes parameter estimation and spatially constrained layers.\n",
+    "    Both networks employ a rectified linear unit (ReLU) activation function after each convolution layer \n",
+    "    and the first two fully-connected layers (1st, 3rd, 5th, and 6th layer). To prevent overfitting,\n",
+    "    dropout is applied to the first two fully-connected layers (5th and 6th layer,\n",
+    "    after ReLU is applied) with a dropout rate of 0.2.\"\"\"\n",
+    "        \n",
+    "#         \"isCancerous\": {\"accuracy\": 0.92, \"precision\": 0.87, \"recall\": 0.89, \"f1_score\": 0.88},\n",
+    "        \"cellType\": {\"accuracy\": 0.80, \"precision\": 0.781, \"recall\": 0.827, \"f1_score\": 0.802}\n",
+    "    }\n",
+    "    \n",
     "}\n",
     "\n",
     "# Compare our results to the existing works\n",
@@ -2763,7 +2844,7 @@
     "        for metric, value in metrics.items():\n",
     "            diff = our_results[task][metric] - value\n",
     "            print(f\"{metric.capitalize()} difference: {diff:.4f}\")\n",
-    "        print()\n"
+    "        print()"
    ]
   },
   {
