--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -2347,7 +2347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameter tuning\n",
+    "## 9.2 Hyperparameter tuning\n",
     "\n",
     "+ Hyperparameter tuning is an important step in improving the model's performance. We can use different techniques such as Grid Search, Random Search, or Bayesian Optimization. We will use Keras Tuner, a library that helps us pick the optimal set of hyperparameters for the TensorFlow program.\n",
     "\n",
@@ -2808,7 +2808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deep Learning Model\n",
+    "## 9.3 Deep Learning Model\n",
     "\n",
     "The architecture of the proposed Deep Learning model is designed to handle complex data patterns. Motivations behind choosing this architecture:\n",
     "\n",
@@ -3061,15 +3061,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "325/325 [==============================] - 2s 6ms/step\n",
-      "Epoch 1/10\n"
+      "325/325 [==============================] - 2s 5ms/step\n",
+      "Epoch 1/10\n",
+      "511/511 - 7s - loss: 0.4927 - accuracy: 0.8231 - val_loss: 0.7998 - val_accuracy: 0.7125 - 7s/epoch - 14ms/step\n",
+      "Epoch 2/10\n",
+      "511/511 - 7s - loss: 0.4866 - accuracy: 0.8280 - val_loss: 0.9838 - val_accuracy: 0.6842 - 7s/epoch - 14ms/step\n",
+      "Epoch 3/10\n",
+      "511/511 - 7s - loss: 0.4856 - accuracy: 0.8261 - val_loss: 0.8081 - val_accuracy: 0.7150 - 7s/epoch - 14ms/step\n",
+      "Epoch 4/10\n",
+      "511/511 - 7s - loss: 0.4766 - accuracy: 0.8309 - val_loss: 0.9056 - val_accuracy: 0.7064 - 7s/epoch - 14ms/step\n",
+      "Epoch 5/10\n",
+      "511/511 - 7s - loss: 0.4735 - accuracy: 0.8344 - val_loss: 0.8423 - val_accuracy: 0.6973 - 7s/epoch - 13ms/step\n",
+      "Epoch 6/10\n",
+      "511/511 - 7s - loss: 0.4749 - accuracy: 0.8297 - val_loss: 0.7679 - val_accuracy: 0.7231 - 7s/epoch - 14ms/step\n",
+      "Epoch 7/10\n",
+      "511/511 - 7s - loss: 0.4930 - accuracy: 0.8242 - val_loss: 0.7820 - val_accuracy: 0.7125 - 7s/epoch - 14ms/step\n",
+      "Epoch 8/10\n",
+      "511/511 - 7s - loss: 0.4707 - accuracy: 0.8305 - val_loss: 0.7331 - val_accuracy: 0.7256 - 7s/epoch - 14ms/step\n",
+      "Epoch 9/10\n",
+      "511/511 - 7s - loss: 0.4709 - accuracy: 0.8348 - val_loss: 0.7777 - val_accuracy: 0.7226 - 7s/epoch - 13ms/step\n",
+      "Epoch 10/10\n",
+      "511/511 - 7s - loss: 0.4694 - accuracy: 0.8338 - val_loss: 0.7923 - val_accuracy: 0.6872 - 7s/epoch - 14ms/step\n",
+      "62/62 [==============================] - 0s 6ms/step\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported format string passed to NoneType.__format__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:21\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to NoneType.__format__"
      ]
     }
    ],
@@ -3092,7 +3123,8 @@
     "\n",
     "# Evaluate the improved model on the validation set\n",
     "val_cell_type_pred = np.argmax(cell_type_model.predict(val_images), axis=-1)\n",
-    "cell_type_metrics = calculate_metrics(val_cell_type_true, val_cell_type_pred)\n",
+    "# get the classification report\n",
+    "cell_type_metrics = precision_recall_fscore_support(val_cell_type_labels.argmax(axis=1), val_cell_type_pred, average='macro')\n",
     "\n",
     "print(\"Improved Cell Type Model: Accuracy: {:.4f}, Precision: {:.4f}, Recall: {:.4f}, F1-score: {:.4f}\".format(*cell_type_metrics))\n",
     "\n",
@@ -3118,9 +3150,23 @@
     "\n",
     "# Evaluate the improved model on the validation set\n",
     "val_cell_type_pred = np.argmax(cell_type_model.predict(val_images), axis=-1)\n",
-    "cell_type_metrics = calculate_metrics(val_cell_type_true, val_cell_type_pred)\n",
+    "cell_type_loss, cell_type_accuracy = cell_type_model.evaluate(val_images, val_cell_type_labels, verbose=2)\n",
+    "print(f'Cell Type Model Accuracy: {cell_type_accuracy:.4f}, Loss: {cell_type_loss:.4f}')\n",
     "\n",
-    "print(\"Improved Cell Type Model: Accuracy: {:.4f}, Precision: {:.4f}, Recall: {:.4f}, F1-score: {:.4f}\".format(*cell_type_metrics))\n",
+    "# plot learning curves\n",
+    "plot_learning_curve(cell_type_model.history, 'cell_type_model')\n",
+    "\n",
+    "\n",
+    "# get predictions\n",
+    "cell_type_predictions = cell_type_model.predict(test_images)\n",
+    "# convert cell_type predictions to one-hot encoding\n",
+    "cell_type_predictions = np.argmax(cell_type_predictions, axis=1)\n",
+    "\n",
+    "# get the confusion matrices\n",
+    "plot_confusion_matrix(test_cell_type_labels.argmax(axis=1), cell_type_predictions, 'cell_type_model')\n",
+    "\n",
+    "# get the classification reports\n",
+    "print(f'Classification report for cell_type prediction:\\n{classification_report(test_cell_type_labels.argmax(axis=1), cell_type_predictions)}')\n",
     "\n",
     "\n"
    ]
@@ -3181,17 +3227,6 @@
     "                                        validation_data=(val_images, val_cell_type_labels),\n",
     "                                        epochs=EPOCHS, verbose=2,\n",
     "                                        callbacks=[cell_type_checkpoint])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean up: terminate the kernel and free memory resources\n",
-    "import os, signal\n",
-    "os.kill(os.getpid(), signal.SIGKILL)"
    ]
   },
   {
@@ -3269,6 +3304,17 @@
     "            diff = our_results[task][metric] - value\n",
     "            print(f\"{metric.capitalize()} difference: {diff:.4f}\")\n",
     "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean up: terminate the kernel and free memory resources\n",
+    "import os, signal\n",
+    "os.kill(os.getpid(), signal.SIGKILL)"
    ]
   },
   {
