added final thoughts

--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -3704,7 +3704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -3729,62 +3729,54 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th>auc</th>\n",
+       "      <th>f1_score</th>\n",
        "      <th>precision</th>\n",
        "      <th>recall</th>\n",
-       "      <th>f1_score</th>\n",
-       "      <th>auc</th>\n",
        "      <th>accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">My Model</th>\n",
-       "      <th>CNN Hyperparameter Tuning on combined data (Is Cancerous)</th>\n",
-       "      <td>0.888601</td>\n",
-       "      <td>0.849010</td>\n",
-       "      <td>0.868354</td>\n",
-       "      <td>0.887816</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th>My Model</th>\n",
        "      <th>CNN Hyperparameter Tuning on combined data (Cell Type)</th>\n",
+       "      <td>0.861915</td>\n",
+       "      <td>0.792034</td>\n",
        "      <td>0.826927</td>\n",
        "      <td>0.781021</td>\n",
-       "      <td>0.792034</td>\n",
-       "      <td>0.861915</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"4\" valign=\"top\">Existing Works</th>\n",
        "      <th>An Efficient Method of Histological Cell Image Detection Based on Spatial Information Convolution Neural Network - CNN(I,C,M,F,S1,S2)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.802000</td>\n",
        "      <td>0.781000</td>\n",
        "      <td>0.823000</td>\n",
-       "      <td>0.802000</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Semantic Segmentation of Cell Nuclei in Breast Cancer using Convolutional Neural Network - CNN</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.844000</td>\n",
        "      <td>0.832000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.851</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Locality Sensitive Deep Learning for Detection and Classification of Nuclei in Routine Colon Cancer Histology Images - softmax CNN + SSPP</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.748000</td>\n",
        "      <td>0.893000</td>\n",
+       "      <td>0.748000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Locality Sensitive Deep Learning for Detection and Classification of Nuclei in Routine Colon Cancer Histology Images - softmax CNN + NEP</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.784000</td>\n",
        "      <td>0.917000</td>\n",
+       "      <td>0.784000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3792,48 +3784,43 @@
        "</div>"
       ],
       "text/plain": [
+       "                                                                        auc  \\\n",
+       "My Model       CNN Hyperparameter Tuning on combined data (Cel...  0.861915   \n",
+       "Existing Works An Efficient Method of Histological Cell Image ...       NaN   \n",
+       "               Semantic Segmentation of Cell Nuclei in Breast ...       NaN   \n",
+       "               Locality Sensitive Deep Learning for Detection ...  0.893000   \n",
+       "               Locality Sensitive Deep Learning for Detection ...  0.917000   \n",
+       "\n",
+       "                                                                   f1_score  \\\n",
+       "My Model       CNN Hyperparameter Tuning on combined data (Cel...  0.792034   \n",
+       "Existing Works An Efficient Method of Histological Cell Image ...  0.802000   \n",
+       "               Semantic Segmentation of Cell Nuclei in Breast ...       NaN   \n",
+       "               Locality Sensitive Deep Learning for Detection ...  0.748000   \n",
+       "               Locality Sensitive Deep Learning for Detection ...  0.784000   \n",
+       "\n",
        "                                                                   precision  \\\n",
-       "My Model       CNN Hyperparameter Tuning on combined data (Is ...   0.888601   \n",
-       "               CNN Hyperparameter Tuning on combined data (Cel...   0.826927   \n",
+       "My Model       CNN Hyperparameter Tuning on combined data (Cel...   0.826927   \n",
        "Existing Works An Efficient Method of Histological Cell Image ...   0.781000   \n",
        "               Semantic Segmentation of Cell Nuclei in Breast ...   0.844000   \n",
        "               Locality Sensitive Deep Learning for Detection ...        NaN   \n",
        "               Locality Sensitive Deep Learning for Detection ...        NaN   \n",
        "\n",
        "                                                                     recall  \\\n",
-       "My Model       CNN Hyperparameter Tuning on combined data (Is ...  0.849010   \n",
-       "               CNN Hyperparameter Tuning on combined data (Cel...  0.781021   \n",
+       "My Model       CNN Hyperparameter Tuning on combined data (Cel...  0.781021   \n",
        "Existing Works An Efficient Method of Histological Cell Image ...  0.823000   \n",
        "               Semantic Segmentation of Cell Nuclei in Breast ...  0.832000   \n",
        "               Locality Sensitive Deep Learning for Detection ...       NaN   \n",
        "               Locality Sensitive Deep Learning for Detection ...       NaN   \n",
        "\n",
-       "                                                                   f1_score  \\\n",
-       "My Model       CNN Hyperparameter Tuning on combined data (Is ...  0.868354   \n",
-       "               CNN Hyperparameter Tuning on combined data (Cel...  0.792034   \n",
-       "Existing Works An Efficient Method of Histological Cell Image ...  0.802000   \n",
-       "               Semantic Segmentation of Cell Nuclei in Breast ...       NaN   \n",
-       "               Locality Sensitive Deep Learning for Detection ...  0.748000   \n",
-       "               Locality Sensitive Deep Learning for Detection ...  0.784000   \n",
-       "\n",
-       "                                                                        auc  \\\n",
-       "My Model       CNN Hyperparameter Tuning on combined data (Is ...  0.887816   \n",
-       "               CNN Hyperparameter Tuning on combined data (Cel...  0.861915   \n",
-       "Existing Works An Efficient Method of Histological Cell Image ...       NaN   \n",
-       "               Semantic Segmentation of Cell Nuclei in Breast ...       NaN   \n",
-       "               Locality Sensitive Deep Learning for Detection ...  0.893000   \n",
-       "               Locality Sensitive Deep Learning for Detection ...  0.917000   \n",
-       "\n",
        "                                                                   accuracy  \n",
-       "My Model       CNN Hyperparameter Tuning on combined data (Is ...       NaN  \n",
-       "               CNN Hyperparameter Tuning on combined data (Cel...       NaN  \n",
+       "My Model       CNN Hyperparameter Tuning on combined data (Cel...       NaN  \n",
        "Existing Works An Efficient Method of Histological Cell Image ...     0.758  \n",
        "               Semantic Segmentation of Cell Nuclei in Breast ...     0.851  \n",
        "               Locality Sensitive Deep Learning for Detection ...       NaN  \n",
        "               Locality Sensitive Deep Learning for Detection ...       NaN  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3843,12 +3830,12 @@
     "\n",
     "# your current model performance\n",
     "my_model_performance = {\n",
-    "    \"CNN Hyperparameter Tuning on combined data (Is Cancerous)\": {\n",
-    "        \"precision\": 0.8886010362694301,\n",
-    "        \"recall\": 0.849009900990099,\n",
-    "        \"f1_score\": 0.8683544303797467,\n",
-    "        \"auc\": 0.8878155306998278\n",
-    "    },\n",
+    "    # \"CNN Hyperparameter Tuning on combined data (Is Cancerous)\": {\n",
+    "    #     \"precision\": 0.8886010362694301,\n",
+    "    #     \"recall\": 0.849009900990099,\n",
+    "    #     \"f1_score\": 0.8683544303797467,\n",
+    "    #     \"auc\": 0.8878155306998278\n",
+    "    # },\n",
     "    \"CNN Hyperparameter Tuning on combined data (Cell Type)\": {\n",
     "        \"precision\": 0.8269267733571313,\n",
     "        \"recall\": 0.7810209639116295,\n",
@@ -3930,14 +3917,6 @@
     "\n",
     "\n",
     "#### [Back to Table of Contents](#0)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "s"
    ]
   }
  ],
