--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -1269,7 +1269,15 @@
     "+ **Confusion Matrix:** The confusion matrix is a handy presentation of the accuracy of a model with two or more classes. For each class, it shows the distribution of its instances classified into all classes. This allows us to see not just where the model is getting it right but, more importantly, where it is getting it wrong - which classes are being confused with each other and where the model's weaknesses lie.\n",
     "Therefore, both of these evaluation methods will give us a better insight into how well our model performs in each class, which is especially important when dealing with imbalanced datasets.\n",
     "\n",
-    "+ While we can **use accuracy to get a sense of overfitting or underfitting**, there are better metrics for model performance in the case of imbalanced datasets. Precision, recall, F1-score, and AUC-ROC are better alternatives."
+    "+ While we can **use accuracy to get a sense of overfitting or underfitting**, there are better metrics for model performance in the case of imbalanced datasets. Precision, recall, F1-score, and AUC-ROC are better alternatives. For a cancer cell type classification problem, the criticality of each metric often depends on the specific context and use case. However, in general, due to the severe consequences of misclassification, particularly false negatives, the following metrics are often considered important:\n",
+    "\n",
+    "**Precision (Positive Predictive Value):** This is the proportion of true positives out of all positive results (both true positives and false positives). High precision means that it is likely correct when the model predicts a cell as cancerous. In a cancer detection context, precision is crucial to avoid overdiagnosis and unnecessary treatments that can have harmful side effects and increase healthcare costs.\n",
+    "\n",
+    "**Recall (Sensitivity or True Positive Rate):** This is the proportion of true positives out of all actual positive cases (true positives and false negatives). High recall means the model correctly identifies a high proportion of all cancerous cells. In a cancer detection context, recall is particularly critical because failing to identify a cancerous cell (false negative) can lead to delayed or missed treatment, potentially leading to severe health consequences.\n",
+    "\n",
+    "**F1-Score:** This is the harmonic mean of precision and recall, and it tries to balance these two metrics. It is particularly useful if there is an uneven class distribution, as precision and recall might give misleading results in such a case.\n",
+    "\n",
+    "**AUC-ROC (Area Under the Receiver Operating Characteristics Curve):** This metric considers the trade-off between sensitivity (true positive rate) and specificity (true negative rate). An AUC-ROC of 1.0 indicates perfect classification, while an AUC-ROC of 0.5 indicates a model that is no better than random guessing. This metric is widely used in binary classification problems and can indicate the model's performance across different thresholds.\n"
    ]
   },
   {
@@ -3948,6 +3956,20 @@
     "df_compare = pd.concat([df_my_model, df_existing_works], keys=['My Model', 'Existing Works'])\n",
     "\n",
     "df_compare"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -------------> OBSERVATION:\n",
+    "\n",
+    "> Based on the table, the \"Locality Sensitive Deep Learning for Detection and Classification of Nuclei in Routine Colon Cancer Histology Images - softmax CNN + NEP\" model performs best on the AUC and F1-score metrics but lacks values for precision, recall, and accuracy. While having a lower AUC value, our model provides a complete evaluation, including precision and recall.\n",
+    "\n",
+    "> It would be ideal to compare these models better if they were evaluated on the same metrics. Moreover, it is essential to consider the problem's specifics - in some cases, certain metrics might be more important than others. For instance, in a medical diagnosis scenario, a **high recall** might be more desirable than high precision to **minimize false negatives**.\n",
+    "\n",
+    "> Recall: Our model has a recall of 0.634295. This is lower than the recall of the \"Spatial Information Convolution Neural Network\" model (0.823) and the \"Semantic Segmentation\" model (0.832)."
    ]
   },
   {
